assets/css/custom.css
/* ... */
.samenstellen h2 {
  font-size: var(--ss);
  margin-bottom: 20px;
}

.short_description {
  margin: 20px 0;
}

.short_description p:first-child {
  margin-bottom: 10px;
}

.step_by {
  width: 100%;
  height: auto;
}

.item_double {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 20px;
}

._more_content {
  margin-top: 10px;
}

.item_double a {
  width: 100%;
  padding: 10px;
  display: block;
  border-radius: 5px;
  text-align: center;
}

.card_image_left {
  display: grid;
  grid-template-columns: 40% 55%;
  gap: 5%;
  border: 1px solid var(--border-color);
  width: 100%;
  padding: 20px;
}

.the_detail a {
  padding: 5px 20px;
  width: max-content;
  font-size: var(--xss);
}

a.details_link {
  color: var(--border-color-darken);
  font-size: var(--xss);
  padding: 0 20px 0 0;
  width: 100%;
  text-align: right;
  background-image: url(../images/arrow_down_gray.svg);
  background-position: center right;
  background-repeat: no-repeat;
  background-size: 10px;
  margin-top: 20px;
}

.slick-arrow._reposition {
  top: -40px;
  z-index: 1;
  border: 1px solid var(--border-color);
  background-size: 70%;
}

.slick-arrow._reposition.prev_btn {
  left: unset !important;
  right: 40px;
}

.product_picture .slick-arrow._reposition {
  top: unset;
  bottom: 20px;
  border: unset;
}

.product_picture .slick-arrow._reposition.next_btn {
  right: 10px !important;
}

.product_picture .image_container {
  height: 400px;
  max-height: 400px;
}

.product_picture .slick-slide img {
  object-fit: contain;
  width: 100%;
}

.popup_image {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 20px;
}

.popup_image a {
  position: relative;
  border-radius: 22px;
  overflow: hidden;
  max-height: 120px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.popup_image a::before {
  display: block;
  content: "a";
  color: transparent;
  background-color: rgb(208, 208, 208);
  width: 100%;
  height: 100%;
  position: absolute;
  background-repeat: no-repeat;
  background-size: 40%;
  background-position: center;
  opacity: 0.5;
}

.popup_image a.image::before {
  background-image: url(../images/zoom.svg);
}

.popup_image a.video::before {
  background-image: url(../images/play.svg);
}

.popup_image img {
  max-width: 100%;
  object-fit: cover;
  display: block;
}

.slider_product_container hr {
  margin: 20px 0;
}

.sub_menu_container {
  display: block;
  position: absolute;
  width: 100%;
  min-width: 100%;
  background-color: white;
  left: 0;
  padding: 40px 0 60px;
  opacity: 0;
  visibility: hidden;
  transition: opacity 0.3s ease-in;
}

.main-menu:hover .sub_menu_container,
.sub_menu_container.active {
  display: inherit;
  opacity: 1;
  visibility: visible;
  transition: opacity 0.3s ease-in;
}

.main-menu:hover .main_menu_list::after {
  opacity: 1;
  visibility: visible;
}

.main_menu_list {
  position: relative;
}

.main_menu_list::after {
  background-color: white;
  content: "";
  color: white;
  left: calc(50% - 10px);
  width: 20px;
  clip-path: polygon(50% 0, 0 100%, 100% 100%);
  position: absolute;
  bottom: 0;
  height: 10px;
  opacity: 0;
  visibility: hidden;
}

.pop_appointment {
  min-height: 100vh;
  width: 100%;
  height: 100%;
  position: fixed;
  align-items: center;
  display: flex;
  opacity: 0;
  visibility: hidden;
  z-index: 0;
  top: 0;
  left: 0;
  transition: all 0.3s ease-in;
}

.pop_appointment.active {
  opacity: 1;
  visibility: visible;
  transition: all 0.3s ease-in;
}

.popup_appointment_overlay {
  background-color: rgba(0, 0, 0, 0.267);
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
}

.appointment_header {
  position: relative;
}

.appointment_header h2 {
  font-size: var(--sm);
}

.appointment_header p {
  color: var(--text-font);
  margin: 15px 0;
}

.appointment_container {
  background-color: white;
  width: 80%;
  max-width: 1045px;
  margin: 0 auto;
  padding: 40px 50px;
  position: relative;
  z-index: 2;
}

.appointment_container .close {
  position: absolute;
  right: 0;
  top: -20px;
}

.appointment_container .close img {
  width: 30px;
  height: 30px;
}

.input_container {
  display: grid;
  grid-template-columns: repeat(2, 47%);
  gap: 6%;
}

.input_card label {
  font-weight: bold;
  display: grid;
}

.input_card input:not([type="radio"]),
.input_card textarea {
  padding: 5px 10px;
  font-size: var(--xs);
  color: var(--black);
  margin: 8px 0;
  border-radius: 4px;
  outline: none;
  border: 1px solid var(--black);
  display: block;
}

.radio_input {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  gap: 5px;
  flex-direction: row-reverse;
}

.input_card input[type="radio"] {
  margin: 8px 0;
}

.input_card .radio_button label {
  font-weight: normal;
  display: inherit;
}

.input_container.full {
  grid-template-columns: 100%;
}

.radio_button.collumn {
  display: flex;
  gap: 40px;
  margin: 8px 0;
}


@media screen and (max-width: 1028px) {
  .full_description {
    grid-template-columns: 100%;
    gap: 20px;
  }

  .upper_content {
    display: flex;
    flex-wrap: wrap;
    justify-content: end;
    align-items: center;
  }

  .button_container,
  .srt_upper {
    width: 50%;
  }

  .items_detail_container {
    width: 100%;
  }

  .appointment_container {
    width: 90%;
    padding-top: 40px;
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 20px;
  }

  .input_container {
    grid-template-columns: 1fr;
    margin: 16px 0;
  }

  .appointment_container .close {
    right: -10px;
    top: -30px;
  }
}
/* ... */

